--- a/csharp/SampleBot/SampleBot/default.htm
+++ b/csharp/SampleBot/SampleBot/default.htm
@@ -4,9 +4,13 @@
     <title></title>
     <meta charset="utf-8" />
 </head>
-<body style="font-family:'Segoe UI'">
-    <h1>SampleBot</h1>
-    <p>Describe your bot here and your terms of use etc.</p>
-    <p>Visit <a href="https://www.botframework.com/">Bot Framework</a> to register your bot. When you register it, remember to set your bot's endpoint to <pre>https://<i>your_bots_hostname</i>/api/messages</pre></p>
+<body>
+    <h1>Botのページへようこそ</h1>
+    <p>Bot開発については以下を参照してください</p>
+    <ul>
+        <li><a href="https://docs.botframework.com/en-us/csharp/builder/sdkreference/" target="_blank">BotFramework公式ドキュメント</a></li>
+        <li><a href="https://github.com/mspjp/201612hackathonyokohama" target="_blank">MSPのGitHubリポジトリ</a></li>
+    </ul>
+    <p>エラーログについては<a href="api/Messages" target="_blank">エラーログ</a>を参照してください</p>
 </body>
 </html>
